--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -13,6 +13,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/app_bar"
         android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:layout_marginTop="@dimen/activity_vertical_margin"
         android:gravity="center"
         android:orientation="vertical"
@@ -24,6 +26,27 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:src="@drawable/vivek_me" />
+
+        <TextView
+            android:id="@+id/headAText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="@dimen/hint_margin_bottom"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:fontFamily="sans-serif-light"
+            android:text="@string/headA_text"
+            android:textSize="@dimen/abc_text_size_large_material" />
+
+        <TextView
+            android:id="@+id/ParaAText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="@dimen/hint_margin_bottom"
+            android:fontFamily="sans-serif-light"
+            android:text="@string/ParaA_text"
+            android:textSize="@dimen/abc_text_size_small_material" />
 
     </LinearLayout>
 
