--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.vivek.codifyname.AboutActivity">
+    tools:context="com.codify.vivek.codifyname.AboutActivity">
 
     <include
         android:id="@+id/app_bar"
