--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical"
-    tools:context="com.example.vivek.codifyname.MainActivity">
+    tools:context="com.codify.vivek.codifyname.MainActivity">
 
     <include
         android:id="@+id/app_bar"
@@ -176,11 +176,12 @@
                 android:layout_alignParentStart="true"
                 android:layout_below="@+id/editTextMessage"
                 android:layout_marginTop="@dimen/text_margin_top"
-                android:background="@drawable/round_rect_button"
+                android:background="@color/primary_material_dark"
                 android:clickable="true"
                 android:fontFamily="sans-serif-light"
                 android:padding="@dimen/button_padding"
-                android:text="Submit" />
+                android:text="Submit"
+                android:textColor="@color/primary_material_light" />
 
         </RelativeLayout>
     </ScrollView>
